--- a/public/css/main.css
+++ b/public/css/main.css
@@ -79,11 +79,19 @@
     padding-right: 50px;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
+    max-width: 100%;
     overflow-x: hidden;
     font-family: 'Inter', sans-serif;
     line-height: 24px;
     background-color: #14161f;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 figure, p, address {
@@ -116,6 +124,14 @@ h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: 'Poppins', sans-serif;
     color: #000;
+}
+
+.pink {
+    color: #ed658c !important; font-weight: bold !important;
+}
+
+.blue {
+    color: #54b3d6 !important; font-weight: bold !important;
 }
 
 hr {
@@ -1133,8 +1149,8 @@ ul.external li a:hover {
     position: relative;
     background-color: rgba(255,255,255, 0.1);
     border-radius: 20px;
-    margin-right: 50px;
-    margin-left: 50px;
+    margin-right: 40px;
+    margin-left: 40px;
 }
 
 .card::before {
@@ -1630,6 +1646,18 @@ textarea.form-control {
 ==============================================================*/
 
 @media (min-width: 768px) and (max-width: 979px) {
+    html {
+        overflow-x: hidden !important;
+    }
+
+    body {
+        max-width: 100%;
+        overflow-x: hidden !important;
+        -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+    }
+
     #home-jumbotron {
         margin-top: 150px;
     }
@@ -1757,6 +1785,18 @@ textarea.form-control {
 ==============================================================*/
 
 @media only screen and (min-width: 0px) and (max-width: 480px) {
+    html {
+        overflow-x: hidden !important;
+    }
+
+    body {
+        max-width: 100%;
+        overflow-x: hidden !important;
+        -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+    }
+
     #navigation .container {
         margin-left: 0px;
     }
@@ -2089,6 +2129,18 @@ textarea.form-control {
 ==============================================================*/
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
+    html {
+        overflow-x: hidden !important;
+    }
+
+    body {
+        max-width: 100%;
+        overflow-x: hidden !important;
+        -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+    }
+    
     #navigation .container {
         margin-left: 0px;
     }
